Fixed nav links vertical alignment

--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -27,6 +27,11 @@ for details on configuring this project to bundle and minify static web assets. 
 
 /***New css**/
 
+nav ul{
+    margin-bottom: 0px;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
